# habiticalib

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/: labels.yml  release-drafter.yml
.github/workflows/: autolabel.yml  build.yml  documentation.yml  draft.yml
docs/reference/: habiticalib.md
habiticalib/: const.py  exceptions.py  helpers.py  lib.py  types.py
src/habiticalib/: __init__.py  const.py  exceptions.py  ha.py  helpers.py  lib.py  typedefs.py  types.py
tests/: conftest.py  test_avatar.py  test_get_user.py  test_group.py  test_init.py  test_lib.py  test_login.py  test_serialize.py  test_tasks.py  test_user.py
tests/__snapshots__/: test_avatar.ambr  test_get_user.ambr  test_group.ambr  test_lib.ambr  test_login.ambr  test_serialize.ambr  test_tasks.ambr  test_user.ambr
tests/fixtures/: empty_data.json  login.json  party.json  task.json  task_order.json  tasks.json  user.json  user_anonymized.json  user_styles.json  user_styles_animated_background.json  user_styles_kickstarter.json  user_styles_kickstarter_pets.json  user_styles_seafoam.json  user_styles_shinySeed.json  user_styles_sleeping.json  user_styles_snowball.json  user_styles_special_0.json  user_styles_special_1.json  user_styles_spookySparkles.json  user_styles_weapon_critical.json  user_styles_with_chair.json
